@@ -1,4 +1,6 @@
 
+  * TaskBar Icon is created/removed if enabled/disabled from preferences
+  * Albums list box now only show the Album with the biggest year
   * Fixed bug in playlist not allowing to delete more than one track if the
     first track is selected
   * Added LeoLyrics lyric search http://leoslyrics.com/
